--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <title>Autocomplete</title>
-    <script>
+    <script type="module">
+        import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+
         function onSubmit(event) {
             event.preventDefault();
             const form = document.querySelector('form');
@@ -44,13 +46,43 @@
             .catch((error) => console.error('Error:', error));
         }
 
+        function refreshTrieGraph() {
+            fetch('/trie-graph', {
+                method: 'GET',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+            })
+            .then(response => response.json())
+            .then(json => {
+                const trieViewer = document.getElementById('trie-viewer');
+                trieViewer.textContent = json.data;
+                trieViewer.removeAttribute('data-processed');
+                mermaid.init(undefined, trieViewer);
+                console.log("refreshed the trie viewer!")
+            });
+        }
+
         function setup() {
+            // autocomplete on form change
             const input = document.querySelector('input[name="query"]');
             input.addEventListener('input', (event) => {
                 onFormChange(event.target.value);
             });
+
+            // form submission
             var form = document.querySelector('form');
             form.addEventListener('submit', onSubmit);
+
+            // render trie
+            mermaid.initialize({ startOnLoad: false, maxEdges: 5000 });
+            refreshTrieGraph();
+
+            // SSE for updating the trie dag graph
+            var source = new EventSource("{{ url_for('sse.stream') }}");
+            source.addEventListener('content-updates', function(event) {
+                refreshTrieGraph();
+            }, false);
         }
 
         window.onload = setup;
@@ -67,5 +99,7 @@
         <input type="submit" value="Submit" />
     </form>
     <p id="query-viewer"></p>
+    <p>Visualization of the autocomplete Trie:</p>
+    <pre class="mermaid" id="trie-viewer"></pre>
 </body>
 </html>
