--- a/src/static/trie.html
+++ b/src/static/trie.html
@@ -6,7 +6,7 @@
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
 
         function refreshTrieGraph() {
-            fetch('/trie-graph', {
+            fetch('/trie/graph', {
                 method: 'GET',
                 headers: {
                     'Content-Type': 'application/json',
